fix: booking button link and tag

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -664,7 +664,7 @@ a:visited {
 }
 
 .booking-button {
-  color: #fff;
+  color: #fff !important;
   border-radius: 10px;
   background-color: #f46f43;
   border: none;
