--- a/src/styles/postDetail.scss
+++ b/src/styles/postDetail.scss
@@ -47,7 +47,6 @@
   height: auto !important;
 }
 .heateor_sss_sharing_ul > a {
-
   margin: 2rem 2rem 0 0;
 }
 
@@ -56,9 +55,20 @@
 }
 
 .heateor_sss_button_instagram > span {
-  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);;
+  background: radial-gradient(
+    circle at 30% 107%,
+    #fdf497 0%,
+    #fdf497 5%,
+    #fd5949 45%,
+    #d6249f 60%,
+    #285aeb 90%
+  );
 }
 
+.heateor_sss_button_twitter > span,
+.heateor_sss_facebook > span {
+  display: none !important;
+}
 
 @media screen and (max-width: 1280px) {
   .post-content-wrapper {
