--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -39,10 +39,6 @@ p {
 //   max-width: 480px;
 // }
 
-
-
-
-
 @media screen and (min-width: 600px) {
   .max-width-- {
     max-width: 480px;
@@ -83,7 +79,6 @@ p {
 // }
 
 @media screen and (min-width: 3000px) {
-
   .navbar-wrap .navbar-content,
   .subscribe-division-wrap .container,
   .footer-container-wrapper .footer-container,
@@ -164,7 +159,7 @@ a:visited {
   // border-bottom: 1px solid transparent;
 }
 
-.navbar-content .menu .menu--item.active>a {
+.navbar-content .menu .menu--item.active > a {
   color: #f05638 !important;
 }
 
@@ -397,7 +392,7 @@ a:visited {
   justify-content: center;
 }
 
-.banner-slide-nav-container>span {
+.banner-slide-nav-container > span {
   margin: 0 0.3rem;
   background-color: transparent;
 }
@@ -558,16 +553,17 @@ a:visited {
 
 .subscribe-division-wrap {
   margin-top: 0.2rem;
-  width: 100%;
-  padding-top: 50px;
-  padding-bottom: 50px;
-  background: linear-gradient(90deg,
-      rgba(240, 86, 56, 1) 0%,
-      rgba(240, 86, 56, 1) 25%,
-      rgba(255, 191, 100, 1) 100%);
+  // width: 100%;
+  padding: 50px 10em;
+  background: linear-gradient(
+    90deg,
+    rgba(240, 86, 56, 1) 0%,
+    rgba(240, 86, 56, 1) 25%,
+    rgba(255, 191, 100, 1) 100%
+  );
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   flex-direction: column;
 }
 
@@ -579,10 +575,17 @@ a:visited {
   font-style: italic;
   color: #fff;
   width: 100%;
+  font-size: 2rem;
+  // text-align: center;
 }
 
-.subscribe-title-text>span {
+.subscribe-title-text > span {
   letter-spacing: 8px;
+}
+
+.subscribe-title-text-body {
+  font-weight: 700;
+  text-align: center;
 }
 
 .subscribe-input-form {
@@ -590,14 +593,16 @@ a:visited {
   flex-direction: row;
   justify-content: space-between;
   margin-top: 3rem;
+  padding-bottom: 20px;
+  width: 100%;
 }
 
 .subscribe-input-form .contact-input-container {
-  width: 20%;
+  width: 50%;
 }
 
 .subscribe-input-form .contact-input-container input {
-  width: 90%;
+  width: 100%;
 }
 
 .input-subscribe {
@@ -606,7 +611,7 @@ a:visited {
   border: none;
   background-color: #fff;
   height: 0.7rem;
-  // width: 20%;
+  width: 80%;
   font-size: 1.1rem;
   transition: all 0.1s ease;
 }
@@ -634,6 +639,18 @@ a:visited {
   cursor: pointer;
   background-color: #dc5136;
   border: 1px solid #dc5136;
+}
+
+.msg-container {
+  color: #fff;
+  text-align: center;
+}
+.thank-you-msg {
+  color: #fff;
+  font-style: italic;
+  font-weight: 600;
+  font-size: 1.5rem;
+  text-align: center;
 }
 
 // BOOKING
@@ -674,7 +691,7 @@ a:visited {
   font-weight: 500;
   font-size: 1.2rem;
   transition: all 0.2s ease;
-  box-shadow: 0 1.5px 5px hsla(0%, 0%, 0%, .2);
+  box-shadow: 0 1.5px 5px hsla(0%, 0%, 0%, 0.2);
 }
 
 .booking-button:hover {
@@ -711,7 +728,7 @@ a:visited {
   height: 5rem;
 }
 
-.footer-container>div {
+.footer-container > div {
   padding-bottom: 1rem;
 }
 
@@ -722,7 +739,7 @@ a:visited {
   padding: 0;
 }
 
-.menu-footer ul>h6 {
+.menu-footer ul > h6 {
   margin-right: 1rem;
 }
 
@@ -754,7 +771,7 @@ a:visited {
   transition: all 0.1s ease;
 }
 
-.social-icon-wrap>div {
+.social-icon-wrap > div {
   display: inline-block;
 }
 
@@ -831,7 +848,6 @@ a:visited {
 }
 
 @media screen and (max-width: 1260px) {
-
   .menu .menu--item,
   .navbar-wrap.scrolled .menu .menu--item {
     font-size: 1.2rem;
@@ -864,7 +880,7 @@ a:visited {
     justify-content: flex-start;
   }
 
-  .footer-container>div {
+  .footer-container > div {
     margin: 0.5rem 0;
   }
 
@@ -956,6 +972,7 @@ a:visited {
   .subscribe-input-form {
     flex-direction: column;
     align-items: center;
+    width: 100%;
   }
 
   .subscribe-input-form .contact-input-container,
@@ -1006,15 +1023,15 @@ a:visited {
     font-size: 1.4rem;
   }
 
-  .subscribe-title-text>span {
+  .subscribe-title-text > span {
     font-size: 1.5rem;
   }
 
-  .subscribe-title-text-body>span {
+  .subscribe-title-text-body > span {
     font-size: 1rem;
   }
 
-  .menu-footer ul>h6 {
+  .menu-footer ul > h6 {
     font-size: 1rem;
   }
 }
