--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -551,6 +551,13 @@ a:visited {
 
 // SUBSCRIBE
 
+// .container {
+//   display: flex;
+//   flex-direction: column;
+//   // align-items: center;
+//   justify-content: center;
+// }
+
 .subscribe-division-wrap {
   margin-top: 0.2rem;
   // width: 100%;
@@ -569,6 +576,9 @@ a:visited {
 
 .subscribe-division-wrap .container {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .subscribe-title-text {
@@ -591,9 +601,9 @@ a:visited {
 .subscribe-input-form {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  margin-top: 3rem;
-  padding-bottom: 20px;
+  // justify-content: space-between;
+  // margin-top: 3rem;
+  // padding-bottom: 20px;
   width: 100%;
 }
 
@@ -916,6 +926,18 @@ a:visited {
   }
 }
 
+@media screen and (min-width: 1000px) {
+  .subscribe-division-wrap .container {
+    flex-direction: row;
+    align-items: center;
+    margin-top: 3rem;
+    padding-bottom: 20px;
+  }
+  .subscribe-division-wrap {
+    padding: 50px 20em;
+  }
+}
+
 @media screen and (max-width: 1000px) {
   .menu {
     display: none;
@@ -979,7 +1001,7 @@ a:visited {
   .subscribe-input-form .button-subscribe,
   .subscribe-input-form .button-subscribe-loading {
     width: 90%;
-    margin: 1rem 0;
+    margin: 2rem 0;
   }
 
   .subscribe-input-form .contact-input-container input {
