--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -39,10 +39,6 @@ p {
 //   max-width: 480px;
 // }
 
-
-
-
-
 @media screen and (min-width: 600px) {
   .max-width-- {
     max-width: 480px;
@@ -83,7 +79,6 @@ p {
 // }
 
 @media screen and (min-width: 3000px) {
-
   .navbar-wrap .navbar-content,
   .subscribe-division-wrap .container,
   .footer-container-wrapper .footer-container,
@@ -164,7 +159,7 @@ a:visited {
   // border-bottom: 1px solid transparent;
 }
 
-.navbar-content .menu .menu--item.active>a {
+.navbar-content .menu .menu--item.active > a {
   color: #f05638 !important;
 }
 
@@ -397,7 +392,7 @@ a:visited {
   justify-content: center;
 }
 
-.banner-slide-nav-container>span {
+.banner-slide-nav-container > span {
   margin: 0 0.3rem;
   background-color: transparent;
 }
@@ -561,10 +556,12 @@ a:visited {
   width: 100%;
   padding-top: 50px;
   padding-bottom: 50px;
-  background: linear-gradient(90deg,
-      rgba(240, 86, 56, 1) 0%,
-      rgba(240, 86, 56, 1) 25%,
-      rgba(255, 191, 100, 1) 100%);
+  background: linear-gradient(
+    90deg,
+    rgba(240, 86, 56, 1) 0%,
+    rgba(240, 86, 56, 1) 25%,
+    rgba(255, 191, 100, 1) 100%
+  );
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -581,7 +578,7 @@ a:visited {
   width: 100%;
 }
 
-.subscribe-title-text>span {
+.subscribe-title-text > span {
   letter-spacing: 8px;
 }
 
@@ -674,7 +671,7 @@ a:visited {
   font-weight: 500;
   font-size: 1.2rem;
   transition: all 0.2s ease;
-  box-shadow: 0 1.5px 5px hsla(0%, 0%, 0%, .2);
+  box-shadow: 0 1.5px 5px hsla(0%, 0%, 0%, 0.2);
 }
 
 .booking-button:hover {
@@ -689,7 +686,7 @@ a:visited {
   width: 100%;
   padding-top: 50px;
   padding-bottom: 50px;
-  background-color: #f05638;
+  background-color: #000;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -705,25 +702,49 @@ a:visited {
 }
 
 .footer-container .container--logo {
-  background: url("/assets/logo_white.png") no-repeat;
-  background-size: 12rem;
-  width: 12rem;
-  height: 5rem;
+  background: url("/assets/logo_white-orange.png") no-repeat;
+  background-size: 18rem;
+  width: 22rem;
+  height: 9rem;
 }
 
-.footer-container>div {
-  padding-bottom: 1rem;
+// .footer-container > div {
+//   padding-bottom: 1rem;
+// }
+
+.menu-footer {
+  margin-bottom: 2rem;
 }
 
 .menu-footer ul {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   padding: 0;
 }
 
-.menu-footer ul>h6 {
+.menu-footer ul > h6 {
   margin-right: 1rem;
+}
+
+// .about {
+// }
+
+.about > .about--,
+.solutions > .solutions--,
+.home > .home--,
+.posts > .posts--,
+.contact > .contact-- {
+  color: #f15738;
+  font-weight: 700;
+}
+
+.container-menu-footer {
+  margin-bottom: 0.75rem;
+}
+
+.posts > .posts--:hover {
+  color: #ffbf64;
 }
 
 .conditions-container .menu--item.footer a:any-link,
@@ -754,28 +775,36 @@ a:visited {
   transition: all 0.1s ease;
 }
 
-.social-icon-wrap>div {
+.social-icon-wrap > div {
   display: inline-block;
 }
 
+.social-icon-wrap {
+  margin: 1rem 0;
+}
+
 .address-icon-container,
-.social-icon-container,
-.phone-icon-container {
+.phone-icon-container,
+.email-icon-container {
   color: #fff;
-  font-size: 1.2rem;
+  font-size: 1rem;
   padding-right: 0.7rem;
+}
+
+.footer-mail {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.social-icon-container {
+  padding-right: 1rem;
+  color: #fff;
+  font-size: 2rem;
 }
 
 .phone-icon-container {
   font-size: 1rem;
-}
-
-.social-icon-container {
-  font-size: 2rem;
-}
-
-.social-icon-container {
-  padding-left: 0.7rem;
 }
 
 .social-icon-container:hover {
@@ -795,6 +824,12 @@ a:visited {
   flex-direction: row;
   align-items: center;
   // max-width: 10rem;
+}
+
+.footer-number,
+.footer-mail,
+.footer-address {
+  padding-bottom: 1rem;
 }
 
 .conditions-container {
@@ -831,7 +866,6 @@ a:visited {
 }
 
 @media screen and (max-width: 1260px) {
-
   .menu .menu--item,
   .navbar-wrap.scrolled .menu .menu--item {
     font-size: 1.2rem;
@@ -864,7 +898,7 @@ a:visited {
     justify-content: flex-start;
   }
 
-  .footer-container>div {
+  .footer-container > div {
     margin: 0.5rem 0;
   }
 
@@ -1006,15 +1040,15 @@ a:visited {
     font-size: 1.4rem;
   }
 
-  .subscribe-title-text>span {
+  .subscribe-title-text > span {
     font-size: 1.5rem;
   }
 
-  .subscribe-title-text-body>span {
+  .subscribe-title-text-body > span {
     font-size: 1rem;
   }
 
-  .menu-footer ul>h6 {
+  .menu-footer ul > h6 {
     font-size: 1rem;
   }
 }
