--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -33,7 +33,7 @@
 
 .contact-title-text-container .contact-title-text {
   color: #fff;
-  font-weight: 500;
+  font-weight: 700;
   letter-spacing: 2px;
 }
 .contact-title-text-container .contact-body-text {
@@ -50,7 +50,6 @@
 
   max-width: 70rem;
   width: 100%;
-  
 }
 
 .address-container {
@@ -233,6 +232,53 @@
   font-size: 1.2rem;
 }
 
+// Footer Contact Form
+
+.footer-form {
+  color: #fff;
+}
+
+.contact-input-container {
+  margin: 0.5em 0;
+}
+
+.footer-form > .contact-input-container input {
+  padding: 0.5em;
+}
+
+.footer-btn-container {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-top: 2em;
+}
+
+.footer-button {
+  background-color: #f15738;
+  padding: 0.8em 1em;
+  border-radius: 10px;
+  font-weight: 700;
+  cursor: pointer;
+  transition: 0.3s;
+  color: #fff;
+}
+
+.footer-button:hover {
+  background-color: #be381d;
+}
+
+.footer-error {
+  display: none;
+}
+
+.footer-error.show {
+  display: block;
+  transition: all 0.2s ease;
+  margin: 0.5rem 0;
+  color: #ff4a4a;
+}
+
 @media screen and (max-width: 1700px) {
   .contact-info-container {
     padding: 0 10rem;
@@ -269,7 +315,6 @@
   }
 }
 @media screen and (max-width: 880px) {
-
   .message-form-container {
     padding: 1rem 4rem;
   }
