--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -695,7 +695,7 @@ a:visited {
 .footer-container {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
   flex-direction: row;
   width: 100%;
   border-bottom: 1px solid rgba(255, 255, 255, 0.8);
@@ -721,6 +721,7 @@ a:visited {
   flex-direction: column;
   justify-content: center;
   padding: 0;
+  margin: 0;
 }
 
 .menu-footer ul > h6 {
