--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -574,6 +574,17 @@ a:visited {
   flex-direction: column;
 }
 
+#subscribe-division-wrap--contact {
+  margin-top: 0.2rem;
+  // width: 100%;
+  padding: 50px 10em;
+  background: #000000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
 .subscribe-division-wrap .container {
   width: 100%;
   display: flex;
@@ -615,6 +626,11 @@ a:visited {
   width: 100%;
 }
 
+#input-subscribe--contact {
+  background: transparent;
+  border: 1px solid white;
+}
+
 .input-subscribe {
   border-radius: 0.2rem;
   padding: 1rem;
@@ -649,6 +665,13 @@ a:visited {
   cursor: pointer;
   background-color: #dc5136;
   border: 1px solid #dc5136;
+}
+
+#button-subscribe--contact:hover {
+  cursor: pointer;
+  background-color: #eee;
+  border: 1px solid #eee;
+  color: #000000;
 }
 
 .msg-container {
@@ -934,7 +957,7 @@ a:visited {
     padding-bottom: 20px;
   }
   .subscribe-division-wrap {
-    padding: 50px 20em;
+    padding: 50px 15em;
   }
 }
 
@@ -976,6 +999,10 @@ a:visited {
   .big-division .big-division-content .solutions-icon.icon-3 {
     max-width: 5rem;
   }
+
+  .subscribe-division-wrap .container {
+    flex-direction: row;
+  }
 }
 
 @media screen and (max-width: 920px) {
@@ -1006,6 +1033,9 @@ a:visited {
 
   .subscribe-input-form .contact-input-container input {
     width: 92%;
+  }
+  .subscribe-division-wrap .container {
+    flex-direction: column;
   }
 }
 
@@ -1111,5 +1141,9 @@ a:visited {
 
   .big-division-content {
     padding: 90px 10px !important;
+  }
+
+  .subscribe-division-wrap {
+    padding: 30px 1em !important;
   }
 }
