--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -661,7 +661,7 @@ a:visited {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  padding: 5em;
+  padding: 3em 5em;
   text-align: center;
 }
 
