--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -579,9 +579,8 @@ a:visited {
 
 .subscribe-division-wrap {
   margin-top: 0.2rem;
-  width: 100%;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  // width: 100%;
+  padding: 50px 25em;
   background: linear-gradient(
     90deg,
     rgba(240, 86, 56, 1) 0%,
@@ -595,9 +594,9 @@ a:visited {
 }
 
 #subscribe-division-wrap--contact {
-  margin-top: 0.2rem;
+  margin-top: 0;
   // width: 100%;
-  padding: 50px 10em;
+  padding: 50px 25em;
   background: #000000;
   display: flex;
   align-items: center;
@@ -975,6 +974,12 @@ a:visited {
   .solutions-container .solutions-content .solutions-icon.icon-2 {
     padding-top: 250px !important;
   }
+
+  .subscribe-division-wrap,
+  #subscribe-division-wrap--contact {
+    padding-left: 10em;
+    padding-right: 10em;
+  }
 }
 
 @media screen and (max-width: 1260px) {
@@ -1048,9 +1053,6 @@ a:visited {
     align-items: center;
     margin-top: 3rem;
     padding-bottom: 20px;
-  }
-  .subscribe-division-wrap {
-    padding: 50px 15em;
   }
 }
 
@@ -1135,7 +1137,7 @@ a:visited {
   .subscribe-input-form {
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    width: 80%;
   }
 
   .subscribe-input-form .contact-input-container,
