--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -441,16 +441,20 @@ a:visited {
   justify-content: center;
   position: relative;
   z-index: 20;
-  top: 10em;
   width: 100%;
+  height: 100%;
   // padding: 90px 10%;
-  padding-top: 90px;
-  padding-bottom: 90px;
+  padding: 5em 0;
   margin: 0 auto;
 }
 
+.react-parallax-content {
+  background-color: rgb(0, 0, 0, 0.75);
+  height: 100%;
+}
+
 .big-division-content .big-division-text-container {
-  width: 75%;
+  // width: 75%;
   text-align: center;
   margin-top: 1em;
 }
@@ -463,10 +467,19 @@ a:visited {
   cursor: pointer;
   transition: all 0.2s ease;
   font-size: 2rem;
+  max-width: 50%;
+  margin: 0 auto;
 }
 
 .big-division-section-title:hover {
   color: #f05638;
+}
+
+.big-division-text-container .big-division-section-subtitle {
+  color: #fff;
+  font-size: 1.2rem;
+  max-width: 75%;
+  margin: 0 auto;
 }
 
 .big-division .react-parallax-bgimage {
@@ -655,13 +668,15 @@ a:visited {
 // BOOKING
 
 .booking-container {
-  background-color: #f05638;
+  background-color: #000;
+  color: #f05638;
   // width: 100%;
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  padding: 3em 5em;
+  height: 100vh;
   text-align: center;
 }
 
@@ -685,15 +700,15 @@ a:visited {
 .booking-button {
   color: #fff !important;
   border-radius: 10px;
-  background-color: transparent;
-  border: 1px solid #fff;
+  background-color: #f05638;
+  text-transform: uppercase;
   padding: 10px 30px;
   line-height: 2.2rem;
   text-align: center;
   font-weight: 500;
   font-size: 1.2rem;
   transition: all 0.2s ease;
-  box-shadow: 0 1.5px 5px hsla(0%, 0%, 0%, 0.2);
+  box-shadow: 0 1.5px 5px rgb(0 0 0 / 20%);
 }
 
 .booking-button:hover {
@@ -761,6 +776,7 @@ a:visited {
 // .about {
 // }
 
+.contact-footer > .contact-footer-title,
 .about > .about--,
 .solutions > .solutions--,
 .home > .home--,
