--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -453,6 +453,14 @@ a:visited {
   height: 100%;
 }
 
+.big-division .big-division-content .solutions-icon-container img {
+  transition: all 0.3s;
+}
+
+.big-division .big-division-content .solutions-icon-container:hover img {
+  transform: scale(1.1);
+}
+
 .big-division-content .big-division-text-container {
   // width: 75%;
   text-align: center;
@@ -467,11 +475,13 @@ a:visited {
   cursor: pointer;
   transition: all 0.2s ease;
   font-size: 2rem;
-  max-width: 50%;
-  margin: 0 auto;
+  margin: 0.4em auto 0;
 }
 
-.big-division-section-title:hover {
+.big-division
+  .big-division-content
+  .solutions-icon-container:hover
+  .big-division-section-title {
   color: #f05638;
 }
 
@@ -585,9 +595,8 @@ a:visited {
 
 .subscribe-division-wrap {
   margin-top: 0.2rem;
-  width: 100%;
-  padding-top: 50px;
-  padding-bottom: 50px;
+  // width: 100%;
+  padding: 50px 10em;
   background: linear-gradient(
     90deg,
     rgba(240, 86, 56, 1) 0%,
@@ -596,37 +605,63 @@ a:visited {
   );
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
+  flex-direction: column;
+}
+
+#subscribe-division-wrap--contact {
+  margin-top: 0.2rem;
+  // width: 100%;
+  padding: 50px 10em;
+  background: #000000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   flex-direction: column;
 }
 
 .subscribe-division-wrap .container {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .subscribe-title-text {
   font-style: italic;
   color: #fff;
   width: 100%;
+  font-size: 2rem;
 }
 
 .subscribe-title-text > span {
   letter-spacing: 8px;
 }
 
+.subscribe-title-text-body {
+  font-weight: 700;
+  text-align: center;
+}
+
 .subscribe-input-form {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  margin-top: 3rem;
+  // justify-content: space-between;
+  // margin-top: 3rem;
+  width: 100%;
 }
 
 .subscribe-input-form .contact-input-container {
-  width: 20%;
+  width: 50%;
 }
 
 .subscribe-input-form .contact-input-container input {
-  width: 90%;
+  width: 100%;
+}
+
+#input-subscribe--contact {
+  background: transparent;
+  border: 1px solid white;
 }
 
 .input-subscribe {
@@ -635,7 +670,7 @@ a:visited {
   border: none;
   background-color: #fff;
   height: 0.7rem;
-  // width: 20%;
+  width: 80%;
   font-size: 1.1rem;
   transition: all 0.1s ease;
 }
@@ -663,6 +698,25 @@ a:visited {
   cursor: pointer;
   background-color: #dc5136;
   border: 1px solid #dc5136;
+}
+
+#button-subscribe--contact:hover {
+  cursor: pointer;
+  background-color: #eee;
+  border: 1px solid #eee;
+  color: #000000;
+}
+
+.msg-container {
+  color: #fff;
+  text-align: center;
+}
+.thank-you-msg {
+  color: #fff;
+  font-style: italic;
+  font-weight: 600;
+  font-size: 1.5rem;
+  text-align: center;
 }
 
 // BOOKING
@@ -1008,6 +1062,18 @@ a:visited {
   }
 }
 
+@media screen and (min-width: 1000px) {
+  .subscribe-division-wrap .container {
+    flex-direction: row;
+    align-items: center;
+    margin-top: 3rem;
+    padding-bottom: 20px;
+  }
+  .subscribe-division-wrap {
+    padding: 50px 15em;
+  }
+}
+
 @media screen and (max-width: 1000px) {
   .menu {
     display: none;
@@ -1057,8 +1123,12 @@ a:visited {
   }
 
   .big-division-content .big-division-text-container {
-    width: 80%;
+    width: 90%;
   }
+
+  // .big-division-content .big-division-text-container .solutions-icon-container {
+  //   margin-bottom: -40px;
+  // }
 
   .big-division .big-division-content .solutions-icon {
     max-width: 6rem;
@@ -1072,6 +1142,10 @@ a:visited {
 @media screen and (max-width: 920px) {
   .division-text {
     font-size: 1.5rem;
+  }
+
+  .big-division-text-container .big-division-section-subtitle {
+    font-size: 1rem;
   }
 
   // .work-brands-img {
@@ -1237,6 +1311,14 @@ a:visited {
 
   .big-division-content {
     padding: 90px 10px !important;
+  }
+
+  .big-division-text-container .big-division-section-title {
+    max-width: 100%;
+  }
+
+  .big-division-text-container .big-division-section-subtitle {
+    display: none;
   }
 
   .solutions-container .solutions-content .solutions-icon.icon-2 {
