--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -470,6 +470,10 @@ a:visited {
   margin: 0 auto;
 }
 
+.big-division-parallax {
+  width: 100%;
+}
+
 .react-parallax-content {
   background-color: rgb(0, 0, 0, 0.75);
   height: 100%;
